# lunchportalen

./: .cursorignore  .dockerignore  .env.example  .env.postdeploy.example  .eslintrc.cjs  .gitattributes  .gitignore  .tmp_remote_types.ts  .vercel-trigger.txt  ACCESS_CONTROL_POLICY.md  AGENTS.md  AGENTS_TLDR.md  AI_KPI_FRAMEWORK.md  AI_RISK_ASSESSMENT_FRAMEWORK.md  AI_STRATEGY_INTERNAL_CONTROLLED.md  ARCHITECTURE_DECISIONS.md  AUDIT_CALENDAR.md  BOARD_LEVEL_SUMMARY.md  BUSINESS_CONTINUITY_PLAN.md  CHANGELOG.md  CHANGE_MANAGEMENT_POLICY.md  CODEX_CHECKLIST.md  CODEX_DATAWRITE.md  COMPLIANCE_OVERVIEW.md  COMPLIANCE_ROADMAP_12M_ISO.md  CORRECTIVE_ACTIONS_LOG.md  COST_MODEL.md  CRO_FRAMEWORK.md  CURSOR_MASTER_PROMPT_LUNCHPORTALEN_V4.md  CURSOR_PHASED_PROMPTS_LUNCHPORTALEN_V5.md  DATA_FLOW_DIAGRAM.md  DATA_GOVERNANCE_POLICY.md  DEVELOPER_ONBOARDING_GUIDE.md  DISASTER_RECOVERY_PLAN.md  DOCS_OVERVIEW.md  DRIFTSCODEX.md  Dockerfile  ENGINEERING_KPI_FRAMEWORK.md  ENTERPRISE_AI_POSITIONING_BRIEF.md  ENTERPRISE_CONTROL_MAP.md  (+62 more)
.githooks/: pre-push
.github/: CODEOWNERS
.tmp/: ab_c_schema_checks.txt  staging_public_schema.sql
Controllers/: RobotsController.cs
Umbraco/: Directory.Packages.props  (+8 more)
cua/: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
cua/cua_chrome/cua_chrome/: __init__.py
cua/cua_chrome/cua_chrome/core/: __init__.py  policy_merge.py
cua/docs/: FINAL_HARDENING_REPORT.md  IMPLEMENTATION_SUMMARY.md  architecture.md  operations.md  release-checklist.md
cua/docs/audit/: 00-index.md  README.md
cua/tests/: __init__.py  test_policy_merge.py
(+6424 files in other folders)
